Worked on completing some schemaDefaults, prepping for field dependencies next

--- a/src/app/formly-form-core/fields/currency-input-field/currency-input-field.component.html
+++ b/src/app/formly-form-core/fields/currency-input-field/currency-input-field.component.html
@@ -53,8 +53,7 @@
       <div *ngIf="prefixSymbol">
         {{ prefixSymbol }}
       </div>
-
-      <div *ngIf="suffixSymbol" class="suffix" [style.transform]="'translate(' + (hiddeninput.clientWidth + 17) + 'px, 0)'">
+      <div *ngIf="suffixSymbol" class="suffix" [style.transform]="'translate(' + (currencyinput.clientWidth + 17) + 'px, 0)'">
         {{ suffixSymbol }}
       </div>
 
