--- a/src/app/formly-form-core/fields/select-dropdown-field/select-dropdown-field.component.html
+++ b/src/app/formly-form-core/fields/select-dropdown-field/select-dropdown-field.component.html
@@ -39,12 +39,12 @@
     <ng-container *ngFor="let option of selectOptions$ | async | sortOptions">
       <mat-optgroup *ngIf="option.group" [label]="option.label" [disabled]="option.disabled" [ngClass]="option.classes">
         <mat-option class="mat-option-wrap" *ngFor="let groupItem of option.group | sortOptions" [value]="groupItem[valueProp]" [disabled]="groupItem.disabled" [ngClass]="groupItem.classes">
-          {{ groupItem[labelProp] }}
+          {{ groupItem[labelProp] | translate | tokens: to }}
         </mat-option>
       </mat-optgroup>
 
       <mat-option class="mat-option-wrap" *ngIf="!option.group" [value]="option[valueProp]" [disabled]="option.disabled" [ngClass]="option.classes">
-        {{ option[labelProp] }}
+        {{ option[labelProp] | translate | tokens: to }}
       </mat-option>
     </ng-container>
 
