Removed need for wrappers to set options

--- a/src/app/formly-form-json-schema-builder/modals/field-editor/field-editor.component.html
+++ b/src/app/formly-form-json-schema-builder/modals/field-editor/field-editor.component.html
@@ -46,8 +46,7 @@
       mat-raised-button
       color="primary"
       [disabled]="field.formControl?.invalid"
-      (click)="updateAndClose()"
-      cdkFocusInitial>
+      (click)="updateAndClose()">
       <div translate>Save & Close</div>
     </button>
   </div>
