--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
-@use '~@angular/material' as mat;
-@import '~@angular/material/_theming';
+@use '@angular/material' as mat;
+@import '@angular/material/_theming';
 
 @include mat.core();
 
