--- a/src/app/formly-form-core/fields/number-input-field/number-input-field.component.html
+++ b/src/app/formly-form-core/fields/number-input-field/number-input-field.component.html
@@ -17,7 +17,7 @@
   <input matInput
     autocomplete="off"
     type="number"
-    [id]="field.id"
+    [id]="field.id!"
     [spellcheck]="true"
     [maxlength]="to.maxlength || 256"
     [placeholder]="(to._translationKey + '.placeholder') | translate | tokens: to"
