--- a/src/app/formly-form-core/fields/text-input-field/text-input-field.component.html
+++ b/src/app/formly-form-core/fields/text-input-field/text-input-field.component.html
@@ -16,7 +16,7 @@
 
   <input matInput
     autocomplete="off"
-    [id]="field.id"
+    [id]="field.id!"
     [type]="to.type || 'text'"
     [spellcheck]="true"
     [maxlength]="to.maxlength || 256"
