--- a/src/app/formly-form-core/fields/toggle-button-field/toggle-button-field.component.html
+++ b/src/app/formly-form-core/fields/toggle-button-field/toggle-button-field.component.html
@@ -5,7 +5,7 @@
 
 <mat-button-toggle-group
   class="input-field"
-  [id]="field.id"
+  [id]="field.id!"
   [formlyAttributes]="field"
   [formControl]="formControl"
   [tabindex]="to?.tabindex || 0"
