--- a/src/app/formly-form-json-schema-builder/components/form-editor/form-editor.component.html
+++ b/src/app/formly-form-json-schema-builder/components/form-editor/form-editor.component.html
@@ -32,7 +32,7 @@
       cdkDrag
       cdkDragLockAxis="y"
       *ngFor="let page of field.fieldGroup; let i = index;"
-      [expanded]="field.fieldGroup?.length < 2 || addedIndex === i"
+      [expanded]="field.fieldGroup?.length! < 2 || addedIndex === i"
       [id]="page.id"
       [disabled]="reorderEnabled"
       [ngStyle]="reorderEnabled && { 'cursor': 'move' } || {}">
@@ -52,7 +52,7 @@
           <div style="margin-left: auto; margin-right: 1em;">
             <div class="center-content error" *ngIf="page.formControl?.touched && page.formControl?.invalid" matTooltip="{{ 'Contains errors' | translate }}">
               <mat-icon>error</mat-icon>
-              {{ page.content }}
+              {{ page.formControl?.errors }}
             </div>
           </div>
 
