--- a/src/app/formly-form-json-schema-builder/components/form-editor/form-editor.component.scss
+++ b/src/app/formly-form-json-schema-builder/components/form-editor/form-editor.component.scss
@@ -32,6 +32,7 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  align-items: flex-start;
 
   .summary-row {
     display: flex;
