--- a/src/app/formly-form-core/display-types/tab-form/tab-form.component.html
+++ b/src/app/formly-form-core/display-types/tab-form/tab-form.component.html
@@ -19,7 +19,7 @@
           </ng-template>
 
           <span [ngStyle]="{ 'opacity': index === selectedIndex ? '1' : '0.6' }">
-            {{ (page.templateOptions?._translationKey + '.label') | translate | tokens: to }}
+            {{ page.templateOptions?._translationKeyLabel | translate | tokens: to }}
           </span>
         </div>
       </ng-template>
