--- a/src/app/formly-form-core/display-types/page-form/page-form.component.html
+++ b/src/app/formly-form-core/display-types/page-form/page-form.component.html
@@ -26,7 +26,7 @@
 <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="changePage($event)" [disablePagination]="to.disablePagination || false">
   <mat-tab *ngFor="let page of field.fieldGroup; let index = index">
     <div class="title" [style.display]="page.templateOptions?.hideLabel ? 'none' : ''">
-      {{ (page.templateOptions?._translationKey + '.label') | translate | tokens: to }}
+      {{ page.templateOptions?._translationKeyLabel | translate | tokens: to }}
     </div>
 
     <formly-field [field]="page" *ngIf="selectedIndex === index" [ngClass]="page.templateOptions?.classes"></formly-field>
